[FE] Adjust comments layout, fix post details modal overflow

--- a/wortal-app/src/assets/styles/components/discussion-post-details.scss
+++ b/wortal-app/src/assets/styles/components/discussion-post-details.scss
@@ -44,6 +44,11 @@ app-discussion-post-details {
     }
   }
 
+  .discussion-content {
+    overflow: auto !important;
+    height: 65vh !important;
+  }
+
   .discussion-action-button {
     color: $my-primary-OG;
   }
